testdata/baselines/reference/submodule/compiler/reactTagNameComponentWithPropsNoOOM.errors.txt
reactTagNameComponentWithPropsNoOOM.tsx(3,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== reactTagNameComponentWithPropsNoOOM.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    declare const Tag: keyof React.ReactHTML;
    
    const classes = "";
    const rest: {} = {};
    const children: any[] = [];
    <Tag className={classes} {...rest}>
    {children}
    </Tag>